# LoopStructural

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  .release-please-manifest.json  12_faulted_fold.ipynb  API.html  CHANGELOG.html  CHANGELOG.md  CITATION.cff  Dockerfile  Dockerfile.back  DockerfileDev  LICENSE  LoopStructural.interpolators.html  LoopStructural.modelling.html  LoopStructural.utils.html  LoopStructural.visualisation.html  MANIFEST.in  Makefile  README.md  about.html  background.html  build_notebooks.sh  change_list.md  changelog.html  changelog.md  contributors_guide.html  docker-compose-win.yml  docker-compose.yml  genindex.html  index-2.rst  index-be56e52647681c3d.rst  index.html  installation.html  issues.html  meshpy.sh  objects.inv  py-modindex.html  pyproject.toml  (+11 more)
Claudius/: APoints.csv  DPoints.csv  DSection.csv  Fault.ts  _README.md
FME/: __init__.py  discete_interpolator.py  discrete_fold_interpolator.py  dsi_helper.c  dsi_helper.pyx  dsi_interpolator.py  fault_segment.py  finite_difference_interpolator.py  fold.py  foldframe.py  geological_feature.py  geological_interpolator.py  geological_points.py  helper.py  marching_tetra.c  marching_tetra.pyx  model_visualisation.py  pli_interpolator.py  structural_frame.py  structuralframes.py  structured_grid.py  svariogram.py  tet_mesh.py  useage  utils.py
LoopStructural/: CHANGELOG.md  __init__.py  version.py
_auto_examples/: index.html  sg_execution_times.html
_autosummary/: LoopStructural.GeologicalModel.html  LoopStructural.Path.html  LoopStructural.analysis.calculate_fault_intersections.html  LoopStructural.analysis.calculate_fault_topology_matrix.html  LoopStructural.analysis.displacement_missfit.html  LoopStructural.analysis.getLogger.html  LoopStructural.analysis.html  LoopStructural.api.LoopInterpolator.html  LoopStructural.api.LoopIsosurfacer.html  LoopStructural.api.html  LoopStructural.datasets.html  LoopStructural.datasets.load_claudius.html  LoopStructural.datasets.load_duplex.html  LoopStructural.datasets.load_fault_trace.html  LoopStructural.datasets.load_geological_map_data.html  LoopStructural.datasets.load_grose2017.html  LoopStructural.datasets.load_grose2018.html  LoopStructural.datasets.load_grose2019.html  LoopStructural.datasets.load_intrusion.html  LoopStructural.datasets.load_laurent2016.html  LoopStructural.datasets.load_noddy_single_fold.html  LoopStructural.datasets.load_tabular_intrusion.html  LoopStructural.datasets.load_unconformity.html  LoopStructural.datasets.normal_vector_headers.html  LoopStructural.datasets.strike_dip_headers.html  LoopStructural.datasets.value_headers.html  LoopStructural.datatypes.BoundingBox.html  LoopStructural.datatypes.StructuredGrid.html  LoopStructural.datatypes.Surface.html  LoopStructural.datatypes.ValuePoints.html  LoopStructural.datatypes.VectorPoints.html  LoopStructural.datatypes.html  LoopStructural.dictConfig.html  LoopStructural.getLogger.html  LoopStructural.html  LoopStructural.interpolators.DiscreteFoldInterpolator.html  LoopStructural.interpolators.DiscreteInterpolator.html  LoopStructural.interpolators.FiniteDifferenceInterpolator.html  LoopStructural.interpolators.GeologicalInterpolator.html  LoopStructural.interpolators.IntEnum.html  (+579 more)
_sources/: LoopStructural.interpolators.rst.txt  LoopStructural.utils.rst.txt  LoopStructural.visualisation.rst.txt  about.rst.txt  background.rst.txt  changelog.md.txt  index.rst.txt  installation.rst.txt  issues.rst.txt  sg_execution_times.rst  sg_execution_times.rst.txt
_static/: contributors_guide.rst  docker.rst  documentation_options.js  overview.rst  static_viewer.html  ubuntu_install.rst  windows_install.rst  wls_install.rst
auto_examples/: 01. Implicit surface modelling.html  02. Modelling folded surfaces.html  03. Modelling refolded folds.html  04. Adding faults to implicit interpolator.html  05. Faulted fold series.html  1_data_prepration.html  2_surface_modelling.html  3_adding_folds_to_surfaces.html  example1.html  faulted_fold.html  faults.html  folds.html  index.html  plot_1_data_prepration.html  plot_2_surface_modelling.html  plot_3_adding_folds_to_surfaces.html  plot_3_multiple_groups.html  plot_4_using_stratigraphic_column.html  plot_adding_folds_to_surfaces.html  plot_comparing_interpolators.html  probabilistic_faulted_folds.html  probabilistic_faults.html  probabilistic_folds.html  refolded_folds.html  sg_execution_times.html  surfacemodelling.html
conda/: conda_build_config.yaml  meta.yaml
dev/: Untitled.ipynb  run_m2l_model.py  run_model.py  solver time estimate iterative.ipynb  solver time estimate.ipynb  solver_diagnostic.py  solver_diagnostic.txt  solver_diagnostics.py  visualisation check.ipynb
(+2021 files in other folders)
